--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "chalk": "^1.1.1",
     "fuzzy": "^0.1.1",
     "inquirer": "^0.10.1",
-    "to-clipboard": "^0.2.0"
+    "minimist": "^1.2.0",
+    "to-clipboard": "^0.2.0",
+    "yargs": "^3.29.0"
   }
 }
