Add feature search to fuzzy match mode
Closes #9

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "geojson-xyz": "./geojson-xyz"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,11 +27,15 @@
   "homepage": "https://github.com/tmcw/geojson-xyz#readme",
   "dependencies": {
     "chalk": "^1.1.1",
+    "csv-parser": "^1.9.2",
     "fuzzy": "^0.1.1",
-    "geojson-xyz-data": "^3.0.0",
+    "geojson-xyz-data": "anandthakker/geojson-xyz-data#aea16ebbd79eb5ed893e0e686a0a8aea0cb37afe",
     "inquirer": "^0.10.1",
     "minimist": "^1.2.0",
     "to-clipboard": "^0.2.0",
     "yargs": "^3.29.0"
+  },
+  "devDependencies": {
+    "tap": "^5.1.1"
   }
 }
